--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>gameoflife</artifactId>
     <version>SNAPSHOT-1.2.${v}</version>
     <packaging>pom</packaging>
+	<packaging>war</packaging>
     <name>gameoflife</name>
     <url>https://github.com/wakaleo/game-of-life</url>
     <properties>
