--- a/pom.xml
+++ b/pom.xml
@@ -279,7 +279,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-enforcer-plugin</artifactId>
-                        <version>1.0</version>
+                        <version>1.0.0-SNAPSHOT</version>
                         <executions>
                             <execution>
                                 <id>enforce-versions</id>
