--- a/pom.xml
+++ b/pom.xml
@@ -278,7 +278,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-enforcer-plugin</artifactId>
-                        <version>1.0.0-SNAPSHOT</version>
+                        <version>1.0</version>
                         <executions>
                             <execution>
                                 <id>enforce-versions</id>
@@ -374,7 +374,7 @@
                             <dependency>
                                 <groupId>com.wakaleo.gameoflife</groupId>
                                 <artifactId>gameoflife-build</artifactId>
-                                <version>${project.version}</version>
+                                <version>2.0.0-SNAPSHOT</version>
                             </dependency>
                         </dependencies>
                     </plugin>
