--- a/pom.xml
+++ b/pom.xml
@@ -374,7 +374,7 @@
                             <dependency>
                                 <groupId>com.wakaleo.gameoflife</groupId>
                                 <artifactId>gameoflife-build</artifactId>
-                                <version>2.0.0-SNAPSHOT</version>
+                                <version>SNAPSHOT-1.2.${v}</version>
                             </dependency>
                         </dependencies>
                     </plugin>
