--- a/gameoflife-deploy/pom.xml
+++ b/gameoflife-deploy/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>gameoflife</artifactId>
         <groupId>com.wakaleo.gameoflife</groupId>
-        <version>0.0.56-SNAPSHOT</version>
+        <version>SNAPSHOT-1.2.${v}</version>
     </parent>
     <groupId>com.wakaleo.gameoflife</groupId>
     <artifactId>gameoflife-deploy</artifactId>
