--- a/pom.xml
+++ b/pom.xml
@@ -490,9 +490,21 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-jxr-plugin</artifactId>
                         <version>2.1</version>
-                    </plugin>
+                    </plugin><distributionManagement>
+    <repository>
+        <id>central</id>
+        <name>Artifactory-releases</name>
+        <url>http://192.168.0.26:8081/artifactory/Chanu-Raghu</url>
+    </repository>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>Artifactory-snapshots</name>
+        <url>http://192.168.0.26:8081/artifactory/Chanu-Raghu</url>
+    </snapshotRepository>
+</distributionManagement>
                 </plugins>
             </reporting>
         </profile>
     </profiles>
+    
 </project>
