--- a/gameoflife-acceptance-tests/pom.xml
+++ b/gameoflife-acceptance-tests/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.wakaleo.gameoflife</groupId>
     <artifactId>gameoflife-acceptance-tests</artifactId>
-    <version>SNAPSHOT-1.2.${v}</version>
+    <version>SNAPSHOT-1.2</version>
     <name>gameoflife-acceptance-tests</name>
     <properties>
         <target.version>0.9.22</target.version>
