--- a/gameoflife-web/pom.xml
+++ b/gameoflife-web/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>gameoflife</artifactId>
         <groupId>com.wakaleo.gameoflife</groupId>
-        <version>SNAPSHOT-1.2</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.wakaleo.gameoflife</groupId>
     <artifactId>gameoflife-web</artifactId>
